--- a/MenuManagement/MenuManagement.csproj
+++ b/MenuManagement/MenuManagement.csproj
@@ -31,7 +31,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Authentication.cs" />
+    <Compile Include="AuthenticationResult.cs" />
+    <Compile Include="ExtensionForLoading.cs" />
     <Compile Include="Management.cs" />
+    <Compile Include="OrderingState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dish.cs" />
